--- a/style.css
+++ b/style.css
@@ -1,3 +1,42 @@
 body {
     background-color: hsl(217, 54%, 11%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: hsl(0, 0%, 100%);
+    height: 100vh;
+    font-size:1.125rem;
+    font-family: "Outfit", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+}
+.container {
+    display: flex;
+    flex-direction: column;
+    gap: 1.3rem;
+    background-color: hsl(216, 50%, 16%);
+    max-width: 20rem;
+    padding: 1.4rem;
+    border-radius: 15px;
+    
+}
+.container>div {
+    width: 100%;
+}
+.cube {
+    width: 100%;
+    border-radius: 15px;
+}
+h1 {
+    font-size:larger ;
+    font-weight: 600;
+    margin-top: 0rem;
+    margin-bottom: 0rem;
+}
+span {
+    color:#0bffff;
+    font-weight: 400;
+    margin-left: 0.5rem;
+    
 }
