--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     font-size:1.125rem;
     font-family: "Outfit", sans-serif;
     font-optical-sizing: auto;
-    font-weight: 300;
+    font-weight: 200;
 }
 .container {
     display: flex;
@@ -37,6 +37,38 @@ h1 {
 span {
     color:#0bffff;
     font-weight: 400;
-    margin-left: 0.5rem;
     
+}
+.space-between {
+    display: flex;
+    justify-content: space-between;
+    
+}
+.icon{
+    margin-right:0.3rem ;
+    margin-top: 0.3rem;
+    
+}
+hr {
+    
+    width: 100%;
+}
+.avator {
+    width: 15%;
+    border: 2px solid white;
+    border-radius: 50%;
+    margin-right: 1rem;
+   
+    
+}
+.creator-info {
+    display: flex;
+    align-items: center;
+   
+    
+}
+.creator-name {
+    color: white;
+    font-weight: 400;
+    margin-left: 0.3rem;
 }
