--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ body {
     font-family: "Outfit", sans-serif;
     font-optical-sizing: auto;
     font-weight: 200;
+    margin: 0;
+    padding: 0;
 }
 .container {
     display: flex;
@@ -34,9 +36,10 @@ h1 {
     margin-top: 0rem;
     margin-bottom: 0rem;
 }
-span {
-    color:#0bffff;
+.eth {
+    
     font-weight: 400;
+     color: #0bffff;
     
 }
 .space-between {
@@ -72,3 +75,33 @@ hr {
     font-weight: 400;
     margin-left: 0.3rem;
 }
+
+.hover-image {
+    position: relative;
+}
+.overlay {
+    position: absolute;
+    width: 100%;
+    height: 98%;
+    top: 0;
+    background-color:#0bffff80;
+    border-radius: 15px;
+    cursor: pointer;
+    opacity: 0;
+    
+}
+.hover-icon {
+    position: absolute;
+    top: 43%;
+    left: 43%;
+}
+
+.overlay:hover  {
+    opacity: 1;
+}
+.hover:hover {
+    color: #0bffff;
+    cursor: pointer;
+}
+
+
